# waybar-workspace-buttons

./: README.md  meson.build
src/: workspace_buttons.c
